feat: chat_in_terminal_vision in colab

--- a/examples/colab_quickstart.ipynb
+++ b/examples/colab_quickstart.ipynb
@@ -30,8 +30,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Install kani\n",
-    "First we install kani. kani requires Python 3.10+."
+    "## Install kani-vision\n",
+    "First we'll install the library. kani-vision requires Python 3.10+."
    ],
    "metadata": {
     "id": "ae89bBMWM_fX"
@@ -162,7 +162,9 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "!wget https://kani-vision.readthedocs.io/en/latest/_static/kani-vision-logo.png"
+    "from IPython.display import Image\n",
+    "!wget -nc https://kani-vision.readthedocs.io/en/latest/_static/kani-vision-logo.png\n",
+    "Image('kani-vision-logo.png', width=300, height=300)"
    ],
    "metadata": {
     "collapsed": false
