chore: colab is cursed

--- a/examples/colab_quickstart.ipynb
+++ b/examples/colab_quickstart.ipynb
@@ -127,13 +127,28 @@
   {
    "cell_type": "code",
    "source": [
-    "# uncomment the next 4 lines to use LLaVA\n",
-    "# !pip install -q 'kani-vision[llava]'\n",
+    "# uncomment the next few lines to use LLaVA\n",
+    "# !pip install -q 'kani-vision[llava]' bitsandbytes accelerate\n",
     "# !pip install --no-deps \"llava @ git+https://github.com/haotian-liu/LLaVA.git@v1.1.1\"\n",
+    "# import torch\n",
     "# from kani.ext.vision.engines.llava import LlavaEngine\n",
-    "# engine = LlavaEngine(\"liuhaotian/llava-v1.5-7b\")\n",
+    "# from transformers import BitsAndBytesConfig\n",
+    "# engine = LlavaEngine(\n",
+    "#     \"liuhaotian/llava-v1.5-7b\",\n",
+    "#     model_load_kwargs={\n",
+    "#         \"device_map\": \"auto\",\n",
+    "#         \"load_in_4bit\": True,\n",
+    "#         \"low_cpu_mem_usage\": True,\n",
+    "#         \"quantization_config\": BitsAndBytesConfig(\n",
+    "#             load_in_4bit=True,\n",
+    "#             bnb_4bit_compute_dtype=torch.float16,\n",
+    "#             bnb_4bit_use_double_quant=True,\n",
+    "#             bnb_4bit_quant_type='nf4'\n",
+    "#         )\n",
+    "#     }\n",
+    "# )\n",
     "\n",
-    "# comment the next line if using LLaMA\n",
+    "# comment the next line if using LLaVA\n",
     "engine = OpenAIVisionEngine(api_key, model=\"gpt-4-visual\")\n",
     "ai = Kani(engine)"
    ],
@@ -163,8 +178,9 @@
    "outputs": [],
    "source": [
     "from IPython.display import Image\n",
+    "\n",
     "!wget -nc https://kani-vision.readthedocs.io/en/latest/_static/kani-vision-logo.png\n",
-    "Image('kani-vision-logo.png', width=300, height=300)"
+    "Image(\"kani-vision-logo.png\", width=300, height=300)"
    ],
    "metadata": {
     "collapsed": false
@@ -175,9 +191,61 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "msg = await ai.chat_round_str(\n",
-    "    [\"Please describe this image:\", ImagePart.from_path(\"kani-vision-logo.png\")]\n",
-    ")\n",
+    "msg = await ai.chat_round_str([\"Please describe this image:\", ImagePart.from_path(\"kani-vision-logo.png\")])\n",
+    "print(msg)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "You can try uploading your own image, too:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image, display\n",
+    "from ipywidgets import widgets\n",
+    "\n",
+    "uploader = widgets.FileUpload(accept=\"image/*\", multiple=True, description=\"Upload images\")\n",
+    "display(uploader)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Make sure you upload your image before running this cell!\n",
+    "\n",
+    "# collect the uploaded files and turn them into ImageParts\n",
+    "query_parts = []\n",
+    "if isinstance(uploader.value, dict):\n",
+    "    # ipywidgets <8\n",
+    "    for name, uploaded_file in uploader.value.items():\n",
+    "        query_parts.append(ImagePart.from_bytes(uploaded_file[\"content\"]))\n",
+    "else:\n",
+    "    # ipywidgets >=8\n",
+    "    for uploaded_file in uploader.value:\n",
+    "        query_parts.append(ImagePart.from_bytes(uploaded_file.content.tobytes()))\n",
+    "\n",
+    "# show each ImagePart in an IPython display\n",
+    "for part in query_parts:\n",
+    "    if isinstance(part, ImagePart):\n",
+    "        display(Image(part.bytes, height=350))\n",
+    "\n",
+    "msg = await ai.chat_round_str([\"Please describe this/these image(s):\", *query_parts])\n",
     "print(msg)"
    ],
    "metadata": {
@@ -190,7 +258,7 @@
     "## Chat\n",
     "Just like the base kani library, kani-vision comes with a utility to interact with a multimodal kani through your terminal!\n",
     "\n",
-    "To send an image to the kani, prefix a file path with an exclamation point, like `Describe this image: !path/to/file.png`.\n",
+    "To send an image to the kani, prefix a file path with an exclamation point, like `Describe this image: !path/to/file.png`. Since we're in Google Colab, you can also use the \"upload images\" button included here to include images with your next message.\n",
     "\n",
     "You can end the chat by sending the message `!stop`."
    ],
