feat: allow chat_in_terminal_vision to use URLs

--- a/examples/colab_quickstart.ipynb
+++ b/examples/colab_quickstart.ipynb
@@ -204,7 +204,7 @@
     "## Chat\n",
     "Just like the base kani library, kani-vision comes with a utility to interact with a multimodal kani through your terminal!\n",
     "\n",
-    "To send an image to the kani, prefix a file path with an exclamation point, like `Describe this image: !path/to/file.png`. Since we're in Google Colab, you can also use the \"upload images\" button included here to include images with your next message.\n",
+    "To send an image to the kani, prefix a file path or URL with an exclamation point, like `Describe this image: !path/to/file.png` or `Describe this image: !https://example.com/image.png`.\n",
     "\n",
     "You can end the chat by sending the message `!stop`."
    ],
