--- a/examples/colab_quickstart.ipynb
+++ b/examples/colab_quickstart.ipynb
@@ -191,6 +191,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# This line might show an error about await outside async function - you can ignore this\n",
     "msg = await ai.chat_round_str([\"Please describe this image:\", ImagePart.from_path(\"kani-vision-logo.png\")])\n",
     "print(msg)"
    ],
