docs: gpt-4-visual -> gpt-4-vision-preview

--- a/examples/colab_quickstart.ipynb
+++ b/examples/colab_quickstart.ipynb
@@ -149,7 +149,7 @@
     "# )\n",
     "\n",
     "# comment the next line if using LLaVA\n",
-    "engine = OpenAIVisionEngine(api_key, model=\"gpt-4-visual\")\n",
+    "engine = OpenAIVisionEngine(api_key, model=\"gpt-4-vision-preview\")\n",
     "ai = Kani(engine)"
    ],
    "metadata": {
